--- a/src/main/resources/templates/admin/article_edit.html
+++ b/src/main/resources/templates/admin/article_edit.html
@@ -39,8 +39,8 @@
           				<div class="form-group" >
           					<div class="col-md-6 col-xs-12" style="padding-left: 0px;padding-bottom: 10px;">
           						<input type="text" class="form-control" placeholder="请输入文章标题" name="title" maxlength="50" id="blogTitle">
-          						<!-- <input type="hidden" name="id" th:value="*{id}" id="blogId"> -->
-          						<input type="hidden" name="id" value="1" id="blogId">
+          						<input type="hidden" name="id" th:value="*{id}" id="blogId">
+          						<!-- <input type="hidden" name="id" value="1" id="blogId"> -->
           					</div>
           					<div class="col-md-3 col-xs-12">
           						<div class="input-group m-bot15">
@@ -79,7 +79,7 @@
           					<div class="form-group col-xs-12">
           						<!--图片上传插件-->
           						<div style="height: 200px;margin-bottom: 20px;">
-          							 <input type="file" id="input-file-events" class="dropify" name="MutiImage"  data-default-file="http://192.168.83.129/group1/M00/00/00/wKhTgVuiCTaANNqiAAMedoHKRiI680.jpg"/>
+          							 <input type="file" id="input-file-events" class="dropify" name="MutiImage"  data-default-file=""/>
           						</div>
           						<!--分类-->
           						<div>
