--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -30,6 +30,8 @@
             	$("#homemenu").addClass("active");
             }else if(menuId == 2){
             	$("#editmenu").addClass("active");
+            }else if(menuId == 3){
+            	$("#editmanage").addClass("active");
             }
         </script>
 	 </footer>
