--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -33,6 +33,8 @@
     <link rel="stylesheet" href="../../css/admin/dropify.css" th:href="@{/css/admin/dropify.css}" />
     <!--SmallPop  -->
     <link rel="stylesheet" href="../../css/spop.min.css" th:href="@{/css/admin/spop.min.css}"/>
+    <!--layui  -->
+    <link href="../../css/admin/layui.css" th:href="@{/css/admin/layui.css}" rel="stylesheet">
     
     
   </head>
