--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -41,7 +41,7 @@
                </li>
 						
 			  <li class="sub-menu">
-                   <a href="article_manage.html" th:href="@{/admin}">
+                   <a id="editmanage" th:href="@{/admin/editManage}">
                        <i class="fa fa-book"></i>
                        <span>文章管理</span>
                    </a>
