--- a/src/main/resources/templates/admin/article_manage.html
+++ b/src/main/resources/templates/admin/article_manage.html
@@ -23,29 +23,42 @@
                 </div>
               </div>
               
-              <div>
-              	<div class="searchTable" style="">
-				  搜索关键字：
-				  <div class="layui-inline">
-				    <input class="layui-input" name="id" id="condition" autocomplete="off">
-				  </div>
-				  
-				   <form class="layui-form layui-form-pane" action="">
-					  	<div class="layui-input-inline">
-						  <select name="modules" lay-verify="required" lay-search="">
-						      <option value="1">layer</option>
-						      <option value="2">form</option>
-						      <option value="3">layim</option>
+              <!-- <div> -->
+              <form class="layui-form layui-form-pane" action="">
+	              	<div class="searchTable layui-form-item" style="" lay-filter="test1">
+					  搜索关键字：
+					  <div class="layui-inline" style="margin-right: 0px;margin-bottom: 0px;" id="htmlBox">
+					    <input class="layui-input" name="id" id="condition" autocomplete="off" style="width: 250px;">
+					  </div>
+					  
+					  <div class="layui-inline conditionBox" style="margin-right: 0px;margin-bottom: 0px;width: 143px;display:none;">
+					  	<div class="layui-input-inline" style="width: 145px;">
+						  <select name="modules" lay-verify="required" lay-filter="selectType" id="selectType">
+						  	  <option value="0">测试用</option>
+						      <option value="1">ID</option>
+						      <option value="2">标题</option>
+						      <option value="3">分类</option>
 						  </select>
 						</div>
-				   </form>
-				  
-				  
-				  
-				  <div class="layui-btn" data-type="reload">搜索</div >
-				</div>
-              	<table id="bligList" lay-filter="bligList"></table>
-              </div>
+					  </div>
+					  
+					  <div class="layui-inline" style="margin-right: 0px;margin-bottom: 0px;width: 143px;">
+					  	<div class="layui-input-inline" style="width: 145px;">
+						  <select name="modules" lay-verify="required" lay-filter="selectType" id="selectType">
+						  	  <option value="0">请选择查询条件</option>
+						      <option value="1">ID</option>
+						      <option value="2">标题</option>
+						      <option value="3">分类</option>
+						  </select>
+						</div>
+					  </div>
+			
+					  <div class="layui-btn" data-type="reload">搜索</div >
+					  
+					</div>
+			  </form>
+              <table id="bligList" lay-filter="bligList"></table>
+              <!-- </div> -->
               <script type="text/html" id="barDemo">
 				<a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="detail">查看</a>
   				<a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
