--- a/src/main/resources/templates/admin/article_edit.html
+++ b/src/main/resources/templates/admin/article_edit.html
@@ -85,29 +85,30 @@
           						<div>
           							<section class="panel">
           								<header class="panel-heading">
-			                              	分类
+			                              	<h4 style="display:inline;">分类</h4>
+			                              	<a style="float:right;color: #bec3c7"><i class="fa fa-plus" aria-hidden="true"></i></a>
 			                          </header>
 			                          <div class="radios scrollBar">
 			                          	<label class="label_radio" for="radio-01">
-				                              <input name="type" id="" value="1" type="radio" checked/> 默认分类
+				                              <input name="typeID" id="" value="1" type="radio" checked/> 默认分类
 				                          </label>
 				                          <label class="label_radio" for="radio-02">
-				                              <input name="type" id="" value="2" type="radio"/> 学习
+				                              <input name="typeID" id="" value="2" type="radio"/> 学习
 				                          </label>
 				                          <label class="label_radio" for="radio-03">
-				                              <input name="type" id="" value="3" type="radio"/> Java
+				                              <input name="typeID" id="" value="3" type="radio"/> Java
 				                          </label>
 				                          <label class="label_radio" for="radio-03">
-				                              <input name="type" id="" value="4" type="radio"/> spring
+				                              <input name="typeID" id="" value="4" type="radio"/> spring
 				                          </label>
 				                          <label class="label_radio" for="radio-03">
-				                              <input name="type" id="" value="5" type="radio"/> 手办
+				                              <input name="typeID" id="" value="5" type="radio"/> 手办
 				                          </label>
 				                          <label class="label_radio" for="radio-03">
-				                              <input name="type" id="" value="6" type="radio"/> 家具
+				                              <input name="typeID" id="" value="6" type="radio"/> 家具
 				                          </label>
 				                          <label class="label_radio" for="radio-03">
-				                              <input name="type" id="" value="7" type="radio"/> 旅行
+				                              <input name="typeID" id="" value="7" type="radio"/> 旅行
 				                          </label>
 			                          </div>
 			                          <input type="hidden" name="select-radio" value="">
